[project]
name = "adversarial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francesco Terenzi", email = "fra.terenz1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.0",
    "pytest>=8.4.1",
]
