[project]
name = "adversarial"
version = "1.0.0"
description = "Manipulates images by adding adversarial noise with PyTorch"
readme = "README.md"
authors = [
    { name = "Francesco Terenzi", email = "francesco.terenzi@alumni.epfl.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.0",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
]
